# twfoundry

./: .cursorrules  .dockerignore  .gitignore  .spectra.yaml  AGENTS.md  AIRFLOW_PHASE1_SUMMARY.md  Design.md  DesignResearch.md  README.md  SPEC.md  build.gradle.kts  settings.gradle.kts
.claude/: launch.json
contracts/: bus-detection-rules.v1.json
design/: mrt-liveboard-mockup.html
docs/: TWFoundry-project-brief.md  bus-delay-signal-detection-plan.md  claude-design-contract-kepler-ingestion-overlays.md  cloud-code-uiux-persona-review-handoff.md  current-session-handoff.md  deployments.md  git-worktree-layout.md  layer-projection-design.md  local-data-artifacts.md  m5-batch-stack-codex-brief.md  m5-batch-stack-runbook.md  minimum-design-system-contract.html  multi-city-bus-onboarding-pipeline-draft.md  operations-dashboard-feature-inventory.md  overlay-registry-design-note.md  parallel-workstream-design-choices.md  prod-uiux-persona-review-2026-06-25.md  prod-uiux-persona-review-2026-06-26.md  redpanda-local-dev.md  starrocks-local-dev.md  starrocks-vs-iceberg-evolution-note.md  tdx-api-usage-and-pricing.md  tdx-bus-delay-api-inventory.md  tdx-bus-route-geometry-api.md  tdx-mrt-api-exploration.md  twfoundry-color-capture.html  twfoundry-island-operations-product-vision.md
experiments/: AGENTS.md
frontend/: .env.example  README.md  biome.json  bun.lockb  index.html  package.json  playwright.config.ts  playwright.fullstack.config.ts  tsconfig.json  tsconfig.node.json  twfoundry-demo.html  (+4 more)
notebooks/: README.md  bus-route-map-matching-concept.ipynb  pyproject.toml
(+1268 files in other folders)
