[project]
name = "twfoundry-notebooks"
version = "0.1.0"
description = "Exploratory notebooks for TWFoundry transit data and map-matching concepts."
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "matplotlib>=3.9.0",
  "polars>=1.0.0",
]

[tool.uv]
package = false
